bookinfo/networking/virtual-service-ratings-db-jason.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: ratings
        subset: v2
  - route:
    - destination:
        host: ratings
        subset: v1
